--- a/src/app/views/pages/support-modal/support-modal.component.html
+++ b/src/app/views/pages/support-modal/support-modal.component.html
@@ -1,27 +1,3 @@
-<!-- <div id="support-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h2>Support</h2>
-    <p>Enter your details below to get support:</p>
-    <form>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name"><br><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email"><br><br>
-      <label for="message">Message:</label>
-      <textarea id="message" name="message"></textarea><br><br>
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-</div> -->
-<!-- <p>support works</p> -->
-<!-- partner button -->
-<!-- <div class="col-lg-3 col-12 col-sm-3">
-  <button class="nav-link btn btn-primary theme-button partnerbtn" data-toggle="modal" data-target="#partnerModal"(click)="showPartnerModal()">PARTNER</button>
-</div> -->
-
-
-
 
 
 <!-- modal part latest-->
@@ -50,46 +26,50 @@
               <label for="switch_right">INVESTMENT</label>
 
             </div>
-            <div class="error"
-              *ngIf="myForm.get('category')?.invalid && (myForm.get('category')?.dirty || myForm.get('category')?.touched)">
-              <div *ngIf="myForm.get('category')?.hasError('required')">Pleae select the option*</div>
-            </div>
+            <div *ngIf="myForm.controls['category'].invalid && (myForm.controls['category'].touched || isSubmitted)"
+              class="text-danger">
+              Pleae select the option* </div>
+
 
             <div class="mb-3">
               <label for="name">Name</label>
-              <input type="text" formControlName="Name" class="form-control" name="Name" placeholder="Enter Name">
-              <div class="error"
-                *ngIf="myForm.get('Name')?.invalid && (myForm.get('Name')?.dirty || myForm.get('Name')?.touched)">
-                <div *ngIf="myForm.get('Name')?.hasError('required')">Name is required*</div>
+              <input type="text" formControlName="Name" class="form-control" name="Name" placeholder="Enter Name"
+                class="form-control">
+
+              <div *ngIf="myForm.controls['Name'].invalid && (myForm.controls['Name'].touched || isSubmitted)"
+                class="text-danger">
+                Please enter a valid name (3-15 characters, only letters and spaces allowed)
               </div>
             </div>
 
             <div class="mb-3">
               <label for="name">Email</label>
-              <input type="text" formControlName="Email" class="form-control" name="Email" placeholder="Enter Email">
-              <div class="error"
-                *ngIf="myForm.get('Email')?.invalid && (myForm.get('Email')?.dirty || myForm.get('Email')?.touched)">
-                <div *ngIf="myForm.get('Email')?.hasError('required')">Email is required*</div>
+              <input type="text" formControlName="Email" class="form-control" name="Email" placeholder="Enter Email"
+                class="form-control">
+              <div *ngIf="myForm.controls['Email'].invalid && (myForm.controls['Email'].touched || isSubmitted)"
+                class="text-danger">
+                Please enter a valid email address
               </div>
             </div>
 
             <div class="mb-3">
               <label for="name">Phone</label>
               <input type="text" formControlName="mobileNumber" class="form-control" name="mobileNumber"
-                placeholder="Enter Phone">
-              <div class="error"
-                *ngIf="myForm.get('mobileNumber')?.invalid && (myForm.get('mobileNumber')?.dirty || myForm.get('mobileNumber')?.touched)">
-                <div *ngIf="myForm.get('mobileNumber')?.hasError('required')">Phone is required*</div>
+                placeholder="Enter Phone" class="form-control">
+              <div
+                *ngIf="myForm.controls['mobileNumber'].invalid && (myForm.controls['mobileNumber'].touched || isSubmitted)"
+                class="text-danger">
+                Please enter a valid 10-digit mobile number starting with 6-9
               </div>
             </div>
 
             <div class="mb-3 comments">
               <label for="name">comments</label>
               <textarea type="text" formControlName="Comments" class="form-control" name="Comments"
-                placeholder="Enter comments"></textarea>
-              <div class="error"
-                *ngIf="myForm.get('Comments')?.invalid && (myForm.get('Comments')?.dirty || myForm.get('Comments')?.touched)">
-                <div *ngIf="myForm.get('Comments')?.hasError('required')">comments are required*</div>
+                placeholder="Enter comments" class="form-control"></textarea>
+              <div *ngIf="myForm.controls['Comments'].invalid && (myForm.controls['Comments'].touched || isSubmitted)"
+                class="text-danger">
+                Comments are required*
               </div>
             </div>
             <div class="mb-3 center ">
