--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -15,7 +15,7 @@
               routerLink="/overview">Dashboard</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="https://ins.finizoninsurance.com/user/home" target="_blank">Insure</a>
+            <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a>
           </li>
           <!-- commented by sw -->
           <!-- <li class="nav-item">
