--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -274,6 +274,217 @@
 }
 
 
+/* css & responsiveness of modal part of lead form of life term and savings & insurance start  */
+
+.modal {
+	bottom: 0;
+	top: auto;
+	transform: translateY(100%);
+	transition: transform 0.6s;
+  }
+  
+  /* 
+  
+  .container{
+	padding:30px;
+	margin-left: 5%;
+	margin-right:5%;
+	border:1px solid #b3b3b3
+  } */
+  
+  .modal.show {
+	transform: translateY(0);
+  }
+  .modal.hide {
+	transform: translateX(0);
+  }
+  
+  #partnerModal {
+  /* overflow-y: hidden !important;  */
+  }
+  
+  /* .modal-dialog {
+	width: 800px !important; 
+	height: 1200px !important; 
+	margin: 0 auto; 
+	transform: translateY(-50%);
+  } */
+  
+  .modal-dialog {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow-y: hidden !important;
+	max-width: 580px !important;
+  
+	/* max-height: 1200px !important; */
+	/* border: 1px solid white; */
+	border-radius: 10px;
+  }
+  .modal-content{
+	/* border: 1px solid red; */
+	max-width:580px !important;
+	/* height: 700px !important; */
+	height:100%;
+	border-radius: 25px;
+  
+  
+  }
+  .modal-body{
+  
+	padding: 60px 60px 60px 60px;
+  
+  }
+  .details{
+	height:100%;
+	/* height: 560px !important; */
+	/* margin-top: -% !important; */
+	border: 1px solid #f2f0f0;
+	padding: 30px 30px 10px 30px;
+	box-shadow: -10px -10px 20px #FFFFFF, 8px 8px 24px rgba(210, 210, 210, 0.5);
+	border-radius: 25px;
+	margin-top: -3%;
+  
+  }
+  .support-title{
+	text-align: center;
+	margin-top: -19% !important;
+	margin-bottom: 5%;
+	font-size: 20px;
+  }
+  /* .modal.modal-body{
+	border: none;
+	padding: 0;
+	margin: 0;
+  } */
+  .closeicon .close{
+	width: 35px;
+	height:35px;
+	margin-left: 28px;
+	margin-top: 23px;
+	/* padding: 8px; */
+	border: 2px solid #F7F7F7;
+	background: linear-gradient(156.65deg, #ECECEC 1.2%, #FFFFFF 98.95%);
+	border-radius: 100px;
+	box-shadow: -10px -10px 20px #FFFFFF, 8px 8px 24px rgba(210, 210, 210, 0.5);
+  }
+  
+  /* .modal-body button{
+   position: relative;
+   top: 65px;
+  } */
+  .modalpartnerbtn {
+	/* margin-left: 150px;
+	margin-top: 25px; */
+	width: 330px !important;
+  }
+  /* .sign-up{
+  display: none;
+  } */
+  /* .checklabel{
+  font-size: 12px;
+  margin-bottom: 10px;
+  } */
+  .error{
+	color: red;
+  }
+  .up-in-toggle {
+  padding: 5px 0px;
+  border: 1px solid #00A3B1;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  }
+  .up-in-toggle input {
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden;
+  }
+  .up-in-toggle input:checked + label {
+  background: #bfe6ec !important;
+  color: #00A3B1 !important ;
+  font-weight: 500 !important;
+  border-radius: 8px !important;
+  box-shadow: none;
+  
+  }
+  /* .up-in-toggle input[type="radio"]:checked + label {
+	background: #bfe6ec !important;
+	color: #ee1010 !important;
+	font-weight: 500 !important;
+	border-radius: 8px !important;
+	box-shadow: none !important;
+  } */
+  .up-in-toggle label {
+  display: inline-block;
+  width: 46%;
+  background-color: transparent;
+  color: #b3b3b3;
+  text-align: center;
+  font-size: 14px;
+  padding: 10px 5px;
+  transition: all 0.1s ease-in-out;
+  }
+  .up-in-toggle label:hover {
+  cursor: pointer;
+  }
+  .form-control {
+	border-radius: 5px;
+	height :45px !important;
+  }
+  .center {
+	display: flex;
+	justify-content: center;
+   
+  }
+  textarea.form-control {
+	height: 100px !important;
+  }
+  
+  .submit{
+	margin-bottom: 10% !important;
+	/* margin-top: -15% !important; */
+  }
+  
+  
+  @media only screen and (max-width: 767px) {
+	.modal-body{
+  
+	  padding: 50px 20px 20px 20px;
+	
+	}
+  
+	/* .support-title{
+	
+	  margin-top: -19% !important;
+	  margin-bottom: 10%;
+	  font-size: 18px;
+	} */
+	.form-control {
+	  border-radius: 5px;
+	  height :35px !important;
+	}
+	.center {
+	  display: flex;
+	  justify-content: center;
+	 
+	}
+	textarea.form-control {
+	  height: 80px !important;
+	}
+	
+	.submit{
+	  margin-bottom: 10% !important;
+	  /* margin-top: -15% !important; */
+	}
+  }
+
+
+/* css & responsiveness of modal part of lead form of life term and savings & insurance end  */
+
+
+
 @media only screen and (max-width: 767px) {
 	.navbar-dark .navbar-toggler {
 		border-color: rgb(226 126 40);
