--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -136,7 +136,7 @@
       <div class="slick-carousel index-product">
         <div class="row ">
           <div class="col col-6" *ngFor="let insurence of InsurencedataList">
-            <div class="loan-type" (click)="InsurancetRouterUrl(insurence)">
+            <div data-toggle="modal" data-target="#leadModal" class="loan-type" (click)="InsurancetRouterUrl(insurence)">
               <img src="{{insurence?.logo}}" alt="l1">
               <p>{{insurence.name}}</p>
             </div>
@@ -149,7 +149,7 @@
       <div class="slick-carousel index-product">
         <div class="row">
           <div class="col col-6" *ngFor="let credit of CreditdataList">
-            <div class="loan-type" (click)="CreditRouterUrl(credit)">
+            <div data-toggle="modal" data-target="#leadModal" class="loan-type" (click)="CreditRouterUrl(credit)">
               <img src="{{credit.logo}}" alt="l1">
               <p>{{credit.name}}</p>
             </div>
@@ -157,6 +157,105 @@
         </div>
       </div>
     </div>
+
+    <!-- modal part of lead form of life term and savings & insurance start-->
+
+    <div class="modal fade" id="leadModal" tabindex="-1" role="dialog" aria-labelledby="leadModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="closeicon">
+            <button type="button" class="close" (click)="hideleadModal()" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+
+          </div>
+          <div class="modal-body">
+
+            <div class="support-title">Get Additional Support</div>
+            <!-- <div class="container"> -->
+            <form [formGroup]="myForm">
+              <div class="details">
+
+                <!-- <div class="up-in-toggle">
+              <input type="radio" id="switch_left" formControlName="category" value="INSURANCE" />
+              <label for="switch_left">INSURANCE</label>
+              <input type="radio" id="switch_right" formControlName="category" value="INVESTMENT" />
+              <label for="switch_right">INVESTMENT</label>
+
+            </div>
+            <div *ngIf="myForm.controls['category'].invalid && (myForm.controls['category'].touched || isSubmitted)"
+              class="text-danger">
+              Pleae select the option*
+             </div> -->
+
+
+                <div class="mb-3">
+                  <label for="name">Name</label>
+                  <input type="text" formControlName="Name" class="form-control" name="Name" placeholder="Enter Name"
+                    class="form-control">
+
+                  <div *ngIf="myForm.controls['Name'].invalid && (myForm.controls['Name'].touched || isSubmitted)"
+                    class="text-danger">
+                    Please enter a valid name (3-15 characters, only letters and spaces allowed)
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="name">Email</label>
+                  <input type="text" formControlName="Email" class="form-control" name="Email" placeholder="Enter Email"
+                    class="form-control">
+                  <div *ngIf="myForm.controls['Email'].invalid && (myForm.controls['Email'].touched || isSubmitted)"
+                    class="text-danger">
+                    Please enter a valid email address
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="name">Phone</label>
+                  <input type="text" formControlName="mobileNumber" class="form-control" name="mobileNumber"
+                    placeholder="Enter Phone" class="form-control">
+                  <div
+                    *ngIf="myForm.controls['mobileNumber'].invalid && (myForm.controls['mobileNumber'].touched || isSubmitted)"
+                    class="text-danger">
+                    Please enter a valid 10-digit mobile number starting with 6-9
+                  </div>
+                </div>
+
+                <div class="mb-3 comments">
+                  <label for="name">comments</label>
+                  <textarea type="text" formControlName="Comments" class="form-control" name="Comments"
+                    placeholder="Enter comments" class="form-control"></textarea>
+                  <div
+                    *ngIf="myForm.controls['Comments'].invalid && (myForm.controls['Comments'].touched || isSubmitted)"
+                    class="text-danger">
+                    Comments are required*
+                  </div>
+                </div>
+                <div class="mb-3 center ">
+                  <button class="btn btn-primary theme-button submit" (click)="Submit()">SUBMIT</button>
+                </div>
+              </div>
+              <div *ngIf="successMessage" class="alert alert-success">
+                Form submitted successfully!
+              </div>
+
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
+<!-- modal part of lead form of life term and savings & insurance end-->
+
+
+
+
+
+
+
+
+
 
     <div class="container mt-5 common-mt-3">
       <div class="slick-carousel index-product">
@@ -573,22 +672,25 @@
         </div>
         <!-- <div class="col col-6 hidden-lg">
 			<img src="assets/img/bajaj_logo.png" class="c5">
-		</div> -->
+		    </div> -->
         <div class="col">
-          <img src="assets/img/sbi_general_logo.png" class="c2" alt="sbi">
+          <!-- <img src="assets/img/sbi_general_logo.png" class="c2" alt="sbi"> -->
+          <img src="assets/img/Reliance_insurance.png" class="c2" alt="reliance">
         </div>
         <div class="col">
           <img src="assets/img/shriram_capital_logo.png" class="c3" alt="shriram">
         </div>
         <div class="col">
-          <img src="assets/img/edelweiss_life_logo.png" class="c4" alt="edelweis">
+          <!-- <img src="assets/img/edelweiss_life_logo.png" class="c4" alt="edelweis"> -->
+          <img src="assets/img/HDFC_life.png" class="c4" alt="hdfc">
+
         </div>
         <div class="col">
           <img src="assets/img/universal_logo.png" class="c4" alt="universal">
         </div>
         <!-- <div class="col col-6 hidden-lg">
 			<img src="assets/img/max_life.png" class="c1">
-		</div> -->
+		    </div> -->
         <div class="col-1">
         </div>
       </div>
@@ -609,11 +711,11 @@
           <img src="assets/img/religare_logo.png" class="c5" alt="religare">
         </div>
       </div>
-      <div class="row align-items-center">
+      <!-- <div class="row align-items-center">
         <div class="col text-center">
           <h5><a href="#" class="view-all"> View All</a></h5>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- Blogs -->
