[Shaunak]added: reliance and HDFC image changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -675,16 +675,13 @@
 			<img src="assets/img/bajaj_logo.png" class="c5">
 		    </div> -->
         <div class="col">
-          <!-- <img src="assets/img/sbi_general_logo.png" class="c2" alt="sbi"> -->
-          <img src="assets/img/Reliance_insurance.png" class="c2" alt="reliance">
+          <img src="assets/img/1280px-Reliance_General_Insurance.svg.png" class="c2 relianceimg" alt="reliance">
         </div>
         <div class="col">
           <img src="assets/img/shriram_capital_logo.png" class="c3" alt="shriram">
         </div>
         <div class="col">
-          <!-- <img src="assets/img/edelweiss_life_logo.png" class="c4" alt="edelweis"> -->
-          <img src="assets/img/HDFC_life.png" class="c4" alt="hdfc">
-
+          <img src="assets/img/1200px-HDFC_Life_Logo.svg_-696x448.png" class="c4 hdfcimg" alt="hdfc">
         </div>
         <div class="col">
           <img src="assets/img/universal_logo.png" class="c4" alt="universal">
