[Shaunak]added: header customer, partner redirections and footer text changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,8 +83,12 @@
                   </div>
 
                   <div class="col-lg-8 col-sm-6">
-                    <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
+                    <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
+                      <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
+                    </a>
+                    <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/login">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                    </a>
 
                   </div>
 
@@ -114,8 +118,12 @@
                   </div>
 
                   <div class="col-lg-8 col-sm-6">
-                    <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
+                    <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home">
+                      <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
+                    </a>
+                    <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/rm/login">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                    </a>
 
                   </div>
 
@@ -511,8 +519,13 @@
                 </div>
 
                 <div class="col-lg-8 col-sm-6">
+                  <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
+                  </a>
+
+                  <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/rm/login">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
+                  </a>  
 
                 </div>
 
