--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -4,66 +4,81 @@
 	  <img src="assets/img/chat_support.svg" />
 	</div> -->
 	<div class="dropdown sort-position">
-	  <button class="btn dropdown-toggle" type="button" id="sort-drop" data-bs-toggle="dropdown" aria-expanded="false">
-		<img class="headphone-icon" src="assets/img/chat_support.svg" />
-	  </button>
-	  <ul class="dropdown-menu sort-by" aria-labelledby="sort-drop">
-		<li><a class="dropdown-item" >
-			<!-- <img class="icon" src="assets/img/email1.png" /> -->
-			<img class="icon" src="assets/img/email2.png" />
-			<!-- <b>Support</b> -->
-			<a data-toggle="modal" data-target="#supportModal"(click)="showSupportModal()"><b>Support</b></a>
+		<button class="btn dropdown-toggle" type="button" id="sort-drop" data-bs-toggle="dropdown"
+			aria-expanded="false">
+			<img class="headphone-icon" src="assets/img/chat_support.svg" />
+		</button>
+		<ul class="dropdown-menu sort-by" aria-labelledby="sort-drop">
+			<li><a class="dropdown-item">
+					<!-- <img class="icon" src="assets/img/email1.png" /> -->
+					<img class="icon" src="assets/img/email2.png" />
+					<!-- <b>Support</b> -->
+					<a data-toggle="modal" data-target="#supportModal" (click)="showSupportModal()"><b>Support</b></a>
 
-		  </a></li>
-		<li><a class="dropdown-item" href="javascript:void(0)">
-			<img class="icon" src="assets/img/whatsapp_icon.svg" />
-			<b>WhatsApp</b> </a></li>
-		<li><a class="dropdown-item" href="tel:080-45574050">
-			<img class="icon" src="assets/img/telephone.png" />
-			<b>080-45574050</b> </a></li>
+				</a></li>
+			<li><a class="dropdown-item" href="javascript:void(0)">
+					<img class="icon" src="assets/img/whatsapp_icon.svg" />
+					<b>WhatsApp</b> </a></li>
+			<li><a class="dropdown-item" href="tel:080-45574050">
+					<img class="icon" src="assets/img/telephone.png" />
+					<b>080-45574050</b> </a></li>
 			<!-- <a href="tel:8665562570">Call us at 866-556-2570</a> -->
-	  </ul>
+		</ul>
 	</div>
-  </div>
+</div>
 
-  <!-- Footer Sticky -->
+<!-- Footer Sticky -->
 <div class="mobile-sticky" [hidden]="!MobileSiginBarFlag">
-    <div class="row">
-        <div class="col-6">
-            <a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#mob_signup">Customer</a>
-        </div>
-        <div class="col-6">
-            <a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#mob_signin">Partner</a>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-6">
+			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+				data-bs-target="#mob_signup">Customer</a>
+		</div>
+		<div class="col-6">
+			<a class="btn btn-primary theme-button w-100" href="javascript:void(0)" data-bs-toggle="modal"
+				data-bs-target="#mob_signin">Partner</a>
+		</div>
+	</div>
 </div>
 
-<!-- Modal Signin-->
+<!-- Partner Modal Signin-->
 <div class="modal fade" id="mob_signin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">         
-            <div class="modal-body">
-                <div class="col-lg-8 col-sm-6">
-					<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
-					<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-body">
+				<div class="col-lg-8 col-sm-6">
+					<a style="text-decoration: none;" target="_blank"
+						href="https://ins.finizoninsurance.com/partner/posp-home">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
+					</a>
+
+					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/advisor-login ">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
+					</a>
 				</div>
-            </div>
+			</div>
 
-        </div>
-    </div>
+		</div>
+	</div>
 </div>
-<div class="modal fade" id="mob_signup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">         
-            <div class="modal-body">
-                <div class="col-lg-8 col-sm-6">
-					<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
-					<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
-				  </div>
-            </div>
 
-        </div>
-    </div>
+<!-- customer modal -->
+<div class="modal fade" id="mob_signup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-body">
+				<div class="col-lg-8 col-sm-6">
+					<a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
+					</a>
+					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Investment</button>
+					</a>
+				</div>
+			</div>
+
+		</div>
+	</div>
 </div>
 
 <section class="footer" id="footer">
@@ -72,7 +87,8 @@
 		<div class="row hidden-xs">
 			<div class="col col-full">
 				<img src="assets/img/finizon_logo_footer.png" class="footer-logo" alt="footer-logo">
-				<p>We collaborate with finance partners across India to guide you towards financial wellness.<br/>Version 1.0.0</p>
+				<p>We collaborate with finance partners across India to guide you towards financial
+					wellness.<br />Version 1.0.0</p>
 				<ul class="follow-list">
 					<li>
 						<a target="_blank" href="https://www.facebook.com/finizonapp"><img
@@ -94,29 +110,29 @@
 			<div class="col col-half insurance">
 				<h5 class="footer-head">Insurance</h5>
 				<ul class="footer-link">
-				
+
 					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home"
-						class="black">Partner Registration</a></li>
-				<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
+							class="black">Partner Registration</a></li>
+					<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
 				</ul>
 			</div>
-			
+
 			<div class="col col-half">
 				<h5 class="footer-head">Wealth Management</h5>
 				<ul class="footer-link">
-					
+
 					<li><a target="_blank"
-						href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
-						class="black">Partner Registration</a></li>
-				<li><a target="_blank" href="https://wealth.finizon.com/rm/login" class="black">Partner Login</a>
-				</li>
-				<li><a target="_blank" href="https://wealth.finizon.com/login" class="black">Grow your wealth</a>
-				</li>
+							href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
+							class="black">Partner Registration</a></li>
+					<li><a target="_blank" href="https://wealth.finizon.com/rm/login" class="black">Partner Login</a>
+					</li>
+					<li><a target="_blank" href="https://wealth.finizon.com/login" class="black">Grow your wealth</a>
+					</li>
 				</ul>
 			</div>
 			<div class="col col-half">
-				
-					<h5 class="footer-head">About Us</h5>
+
+				<h5 class="footer-head">About Us</h5>
 				<ul class="footer-link">
 					<li><a target="_blank" href=" https://finizon.com" class="black">Know more</a></li>
 					<li><a href="#" (click)="scrollToTerms()">Terms of Use</a></li>
@@ -126,19 +142,42 @@
 			</div>
 		</div>
 		<div class="row hidden-sm hidden-lg footer-headlink">
-		
+
 			<h4><a target="_blank" href="http://Finizon.com">Insurance Product</a></h4>
 			<h4><a target="_blank" href="http://wealth.finizon.com">Wealth Products</a></h4>
 			<h4><a target="_blank" href="https://finizon.com">About Us</a></h4>
 		</div>
 		<div class="row">
-			
+
 			<!-- <p class="text-center notetext">**Finizon is now registered as a Direct Broker |Registration No. 000, Registration Code No. IRDA/ DB 000/ 00, Valid till 09/06/2024, License category- Direct Broker (Life & General)| Visitors are hereby informed that their information submitted on the website may be shared with insurers.Product information is authentic and solely based on the information received from the insurers.</p> -->
-			<p class="notetext mb-0">Finizon is now registered as a Direct Broker |Registration No. 801, Registration Code No. IRDAI/ DB 864/ 2021, Valid till 30/01/2024, License category- Direct Broker (Life & General)| Visitors are hereby informed that their information submitted on the website may be shared with insurers. Product information is authentic and solely based on the information received from the insurers.</p>
+			<!-- <p class="notetext mb-0">Finizon is now registered as a Direct Broker |Registration No. 801, Registration Code No. IRDAI/ DB 864/ 2021, Valid till 30/01/2024, License category- Direct Broker (Life & General)| Visitors are hereby informed that their information submitted on the website may be shared with insurers. Product information is authentic and solely based on the information received from the insurers.</p> -->
 
-            <p class="notetext mb-0">AAPT Fintech Private Limited , owner of <a href="https://finizon.com/" target="_blank">www.finizon.com</a> is an AMFI-registered Mutual Fund Distributor (ARN-232373) of third party investment products . Investment Products are subject to investment risks, including the possible loss of the principal amount invested. Past performance is not indicative of future result. </p>
+			<p class="notetext mb-0" style="font-weight: 900; color: black; font-size: 15px;">AAPT Insurance Brokers
+				Private Limited</p>
+			<p class="notetext mb-0">Registered office: Flat 103, Avalon Raheja Acropolis, Deonar Village, Deonar Pada
+				Road MUMBAI MUMBAI 400088 Principal Officer: Mr Tarun Taneja | Email ID: tarun.taneja@aaptfin.com |
+				IRDAI LICENSE NO: 801 | Category: Direct Insurance Broker (Life & General) | Validity of Registration:
+				31/01/2022 to 30/01/2025 T&C Apply,Insurance is the subject matter of solicitation. Visitors are hereby
+				informed that their information submitted on the portal may be shared with insurers registered with us.
+				The information provided on this website/page is only for information's sake. AAPT Insurance Brokers
+				Private Limited does not in any form or manner endorse the information herewith provided on the portal
+				and aims to provide factual and unbiased information to customers to assist in making informed insurance
+				choices. The product information for comparison displayed on this portal is that of the insurers with
+				whom our company has agreements. Product information is solely based on the information received from
+				the Insurer. Please do not distribute information to unintended recipients.<a
+					href="https://dssrylrxc4fuc.cloudfront.net/attachments/files/000/042/598/original/Terms_and_Conditions_Sign_up_%281%29.pdf?1679036046"
+					target="_blank"> Visit T&C </a></p>
 
-            <p class="notetext">The investment decision is exclusively of the  the Investor after independently analyzing all scheme related documents and risk factors.AAPT Fintech does not guarantee any returns and is not the Investment Manager of the products offered through its platform <a href="https://finizon.com/" target="_blank">( www. Finizon.com )</a></p>
+			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of <a href="https://finizon.com/"
+					target="_blank">www.finizon.com</a> is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
+				third party investment products . Investment Products are subject to investment risks, including the
+				possible loss of the principal amount invested. Past performance is not indicative of future result.
+			</p>
+
+			<p class="notetext">The investment decision is exclusively of the the Investor after independently analyzing
+				all scheme related documents and risk factors.AAPT Fintech does not guarantee any returns and is not the
+				Investment Manager of the products offered through its platform <a href="https://finizon.com/"
+					target="_blank">( www. Finizon.com )</a></p>
 			<div class="d-flex justify-content-center copyright">
 				<!-- <span><a  routerLink="/terms-of-use">Terms & Conditions</a> | </span> -->
 				<span><a href="#" (click)="scrollToTerms()">Terms & Conditions</a> | </span>
@@ -147,7 +186,7 @@
 				<span><a href="#">Copyright {{footerYear}} AAPT Fintech Pvt Ltd.</a></span>
 			</div>
 		</div>
-	</div>	
+	</div>
 </section>
 
 
@@ -160,12 +199,12 @@
   
 		<div class="modal-body">
 		  <div class="row"> -->
-			<!-- *****already commented <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-			<!-- <h3 class="otp-title">Enter OTP</h3> -->
-			<!--*****already commented <p class="otp-text">OTP sent on <b>{{FormEmail}} </b>
+<!-- *****already commented <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+<!-- <h3 class="otp-title">Enter OTP</h3> -->
+<!--*****already commented <p class="otp-text">OTP sent on <b>{{FormEmail}} </b>
 			  <span class="link-text" (click)="EditNumber()">Edit Email?</span>
 			</p> -->
-			<!-- <div class="col-2">
+<!-- <div class="col-2">
 			  <input type="text" class="form-control otp-field" maxlength="1" id="footerotp1" [(ngModel)]="footerotp1"
 				(keyup)="keytab(2,$event)" (keypress)="validation.numberOnly($event)" />
 			</div>
@@ -198,10 +237,10 @@
 			</div>
 		  </div>
 		  <div class="row pr-btn"> -->
-			<!--*****already commented <div class="col-12">
+<!--*****already commented <div class="col-12">
 				<button type="button" (click)="verifyOtp()" class="btn btn-primary theme-button">Submit</button>
 			  </div>    -->
-			<!-- <div class="col-12">
+<!-- <div class="col-12">
 			  <button type="button" data-bs-dismiss="modal" aria-label="Close" class="otp-cancel"> Cancel</button>
 			</div>
 		  </div>
@@ -210,5 +249,3 @@
 	  </div>
 	</div>
   </div> -->
-
-
