--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -86,7 +86,7 @@
                     <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/login">
+                    <a style="text-decoration: none;" target="_blank" href="https://forms.gle/J1WexoLfsLAoMrAp7">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -121,7 +121,7 @@
                     <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/rm/login">
+                    <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -523,7 +523,7 @@
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                   </a>
 
-                  <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/rm/login">
+                  <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                   </a>  
 
