--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -124,9 +124,9 @@
 					<li><a target="_blank"
 							href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
 							class="black">Partner Registration</a></li>
-					<li><a target="_blank" href="https://wealth.finizon.com/rm/login" class="black">Partner Login</a>
+					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black">Partner Login</a>
 					</li>
-					<li><a target="_blank" href="https://wealth.finizon.com/login" class="black">Grow your wealth</a>
+					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black">Grow your wealth</a>
 					</li>
 				</ul>
 			</div>
@@ -143,9 +143,46 @@
 		</div>
 		<div class="row hidden-sm hidden-lg footer-headlink">
 
-			<h4><a target="_blank" href="http://Finizon.com">Insurance Product</a></h4>
+			<div class="col col-half">
+				<h5 class="footer-head">Insurance</h5>
+				<ul class="footer-link">
+
+					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/posp-home"
+							class="black">Partner Registration</a></li>
+					<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
+				</ul>
+			</div>
+
+			<div class="col col-half">
+				<h5 class="footer-head">Wealth Management</h5>
+				<ul class="footer-link">
+
+					<li><a target="_blank"
+							href="https://docs.google.com/forms/d/e/1FAIpQLSfNgk3MZJANGVd_PwwcUf7PFlsza2GOG-lVp3PYmBcvZyFtAw/viewform"
+							class="black">Partner Registration</a></li>
+					<li><a target="_blank" href="https://wealth.finizon.com/advisor-login" class="black">Partner Login</a>
+					</li>
+					<li><a target="_blank" href="https://wealth.finizon.com/client-login" class="black">Grow your wealth</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col col-half">
+
+				<h5 class="footer-head">About Us</h5>
+				<ul class="footer-link">
+					<li><a target="_blank" href=" https://finizon.com" class="black">Know more</a></li>
+					<li><a href="#" (click)="scrollToTerms()">Terms of Use</a></li>
+
+					<li><a target="_blank" href="https://finixoninsurancetips.blogspot.com/" class="black">Blog</a></li>
+				</ul>
+			</div>
+			
+
+			<!-- ******ORG******* -->
+			<!-- <h4><a target="_blank" href="http://Finizon.com">Insurance Product</a></h4>
 			<h4><a target="_blank" href="http://wealth.finizon.com">Wealth Products</a></h4>
-			<h4><a target="_blank" href="https://finizon.com">About Us</a></h4>
+			<h4><a target="_blank" href="https://finizon.com">About Us</a></h4> -->
+
 		</div>
 		<div class="row">
 
@@ -168,7 +205,7 @@
 					href="https://dssrylrxc4fuc.cloudfront.net/attachments/files/000/042/598/original/Terms_and_Conditions_Sign_up_%281%29.pdf?1679036046"
 					target="_blank"> Visit T&C </a></p>
 
-			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of <a href="https://finizon.com/"
+			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of <a href="http://65.1.237.83/"
 					target="_blank">www.finizon.com</a> is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
 				third party investment products . Investment Products are subject to investment risks, including the
 				possible loss of the principal amount invested. Past performance is not indicative of future result.
@@ -176,7 +213,7 @@
 
 			<p class="notetext">The investment decision is exclusively of the the Investor after independently analyzing
 				all scheme related documents and risk factors.AAPT Fintech does not guarantee any returns and is not the
-				Investment Manager of the products offered through its platform <a href="https://finizon.com/"
+				Investment Manager of the products offered through its platform <a href="http://65.1.237.83/"
 					target="_blank">( www. Finizon.com )</a></p>
 			<div class="d-flex justify-content-center copyright">
 				<!-- <span><a  routerLink="/terms-of-use">Terms & Conditions</a> | </span> -->
