--- a/src/styles.css
+++ b/src/styles.css
@@ -194,7 +194,7 @@ p {
   font-size: 16px;
   line-height: 32px;
   text-decoration: none;
-  cursor:pointer;
+  /* cursor:pointer; */
 }
 
 .footer p.notetext {
@@ -377,7 +377,9 @@ p {
     color: #444;
     text-decoration: none;
     font-weight: 600;
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 14px;
+
   }
 
   .footer-headlink h4 {
